[refactor] handle deprecations of Double/Float()